--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
+    </center>
     <div class="col-xs-12 header_div text-color">
     <h2> Sound Controled Aliens </h2>
     <p> Make different sounds like boom, snap or clap! Make the aliens Dance!</p>
   </div>
   <div class="naim_div">
-    <center>
       <br>
       <button class="btn btn-warning" onclick="startClassification()"> Start </button>
       <h3 id="result_label"> I can hear:</h3>
