--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    </center>
+    <center>
     <div class="col-xs-12 header_div text-color">
     <h2> Sound Controled Aliens </h2>
     <p> Make different sounds like boom, snap or clap! Make the aliens Dance!</p>
