--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </div>
   <div class="naim_div">
       <br>
-      <button class="btn btn-warning" onclick="startClassification()"> Start </button>
+      <button class="btn btn-warning" onclick="startClassification();"> Start </button>
       <h3 id="result_label"> I can hear:</h3>
       <h4 id="result_confedience"> Acuraccy: </h4>
       <br>
